--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "jest",
     "start:prod": "ts-node ./dist/index.js",
-    "start:dev": "nodemon ./src/index.ts"
+    "start:dev": "nodemon ./src/index.ts",
+    "start:multi": "nodemon ./src/balancer.ts"
   },
   "repository": {
     "type": "git",
@@ -19,15 +20,21 @@
   },
   "homepage": "https://github.com/andrewkarev/CRUD-API#readme",
   "devDependencies": {
+    "@types/jest": "^29.2.5",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
     "eslint": "^8.31.0",
+    "jest": "^29.3.1",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.2",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@types/uuid": "^9.0.0",
     "dotenv": "^16.0.3",
     "uuid": "^9.0.0"
   }
